--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
+    "@react-native-firebase/app": "^14.7.0",
+    "@react-native-firebase/storage": "^14.7.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
     "base-64": "^1.0.0",
@@ -23,7 +25,10 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-image-picker": "^4.7.3",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-progress": "^5.0.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
