--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
+    "@firebase/storage-compat": "^0.1.12",
     "@react-native-firebase/app": "^14.7.0",
     "@react-native-firebase/storage": "^14.7.0",
     "@react-navigation/native": "^6.0.8",
@@ -19,6 +20,7 @@
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
+    "expo-image-picker": "~12.0.1",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.10",
     "react": "17.0.1",
