--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@firebase/storage-compat": "^0.1.12",
+    "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-firebase/app": "^14.7.0",
     "@react-native-firebase/storage": "^14.7.0",
     "@react-navigation/native": "^6.0.8",
@@ -26,12 +27,14 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-cloudinary-image-picker": "^0.0.3",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-image-picker": "^4.7.3",
     "react-native-image-resizer": "^1.4.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-progress": "^5.0.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "expo-media-library": "~14.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
