--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "build": "expo build:android"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
@@ -34,7 +35,8 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-progress": "^5.0.0",
     "react-native-web": "0.17.1",
-    "expo-media-library": "~14.0.0"
+    "expo-media-library": "~14.0.0",
+    "expo-updates": "~0.11.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
